<resources>
    <string name="app_name">TodoListExample</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="create">创建</string>
    <string name="date">日期</string>
    <string name="is_remind">提醒</string>
    <string name="title">标题…</string>
    <string name="description">描述…</string>
    <string name="img">图片</string>
    <string name="username_error">用户名必须是3 ~ 12为字母或数字</string>
    <string name="password_error">密码长度必须是6 ~ 18位字符</string>
    <string name="login_welcome">Welcome!</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="task_count">个任务</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="create_success">创建成功</string>
    <string name="create_failed">创建失败</string>
    <string name="must_edit_title">请将标题填写完整</string>
    <string name="must_select_date">请选择日期</string>
    <string name="login_failed_username">用户不存在</string>
    <string name="login_failed_password">密码错误</string>
    <string name="popup">⋮</string>
    <string name="logout">退出</string>
    <string name="shared_file_id">com.thoughtworks.sharedpreference.PREFERENCE_FILE_KEY</string>
    <string name="is_auto_login">是否自动登录</string>
</resources>